export interface Edificio {
    codigo: string;
    nome: string;
    descricao: string;
    pisoMaxSize: string;
}
