export interface Passagem {
    passagemId: string;
    connection: Array<{ edificio: string; piso: string }>;
}
