export interface Robot {
    numeroSerie : string;
    codigo : string;
    nickname : string;
    marca : string;
    estado : string;
    tipoDeRobot : string;
}
