export interface Sala {
    nome: string;
    descricao: string;
    categoria: string;
    tamanho: string;
    edificio: string;
    piso: string;
}
