export interface TipoDeRobot {
    descricao: string;
    tarefas: Array<{ tarefa: string }>;
}
